[gd_scene load_steps=5 format=3 uid="uid://vlv22j8sx0jf"]

[ext_resource type="Script" uid="uid://cabcmau03kvq7" path="res://scripts/control.gd" id="1_c5yi1"]
[ext_resource type="Texture2D" uid="uid://yeqm5n8i8vhj" path="res://assets/main-menu.png" id="2_ovj3v"]
[ext_resource type="FontFile" uid="uid://brubogpyre5x2" path="res://assets/ThaleahFat.ttf" id="3_4u1fl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4u1fl"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c5yi1")

[node name="ColorRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ovj3v")
expand_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
z_index = 3
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4u1fl")
theme_override_font_sizes/font_size = 32
text = "PLAY"

[node name="Credits" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4u1fl")
theme_override_font_sizes/font_size = 32
text = "CREDITS"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4u1fl")
theme_override_font_sizes/font_size = 32
text = "EXIT"

[node name="CurrentScoreContainer" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CurrentScoreLabel" type="RichTextLabel" parent="CurrentScoreContainer"]
layout_mode = 0
offset_left = 214.0
offset_top = 214.0
offset_right = 472.0
offset_bottom = 291.0
theme_override_fonts/normal_font = ExtResource("3_4u1fl")
theme_override_font_sizes/normal_font_size = 36
text = "CURRENT SCORE: 9999999"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreContainer" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HighScoreLabel" type="RichTextLabel" parent="HighScoreContainer"]
layout_mode = 0
offset_left = 816.0
offset_top = 207.0
offset_right = 1029.0
offset_bottom = 300.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_4u1fl")
theme_override_font_sizes/normal_font_size = 36
text = "HIGH SCORE: 999999"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="FadeOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="CreditsOverlay" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CreditsOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.223196, 0.0705248, 0.0491143, 1)
theme_override_fonts/font = ExtResource("3_4u1fl")
theme_override_font_sizes/font_size = 29
theme_override_styles/normal = SubResource("StyleBoxFlat_4u1fl")
text = "Game Credits

Developer: peePow (Aman Gautam)

Arts (All available on itch.io)
1-Bit Background pack by edermunizz
Dark Samurai by aimmaga

Sound Effects (All available on freesound.org)

Game Character Footsteps On Metal by IENBA
koto loop by zagi2
Simple slash attack sound by BeezleFM

Game Engine:
Godot

Disclaimer: All assets used in this game are sourced under the
 CC0 (public domain) license, and are free to use without restriction.
"
horizontal_alignment = 1
vertical_alignment = 2
